--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "title": "Freelancer",
+    "title": "BitToUs",
     "name": "startbootstrap-freelancer",
     "version": "5.1.3",
     "scripts": {
@@ -15,19 +15,7 @@
         "template"
     ],
     "homepage": "https://startbootstrap.com/template-overviews/freelancer",
-    "bugs": {
-        "url": "https://github.com/BlackrockDigital/startbootstrap-freelancer/issues",
-        "email": "feedback@startbootstrap.com"
-    },
     "license": "MIT",
-    "author": "Start Bootstrap",
-    "contributors": [
-        "David Miller (http://davidmiller.io/)"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/BlackrockDigital/startbootstrap-freelancer.git"
-    },
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.10.2",
         "bootstrap": "4.3.1",
